--- a/css/foundation.css
+++ b/css/foundation.css
@@ -555,39 +555,41 @@ ul.no-bullet, ol.no-bullet {
 textarea {
   display: block;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
   height: 2.4375rem;
   margin: 0 0 1rem;
   padding: 0.5rem;
-  border: 1px solid #cacaca;
+  border: 1px solid #0d0613;
   border-radius: 3px;
-  background-color: #fefefe;
+  background-color: #0e0314;
   -webkit-box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
-          box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
   font-family: inherit;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1.5;
-  color: #0a0a0a;
+  color: #fefefe;
   -webkit-transition: border-color 0.25s ease-in-out, -webkit-box-shadow 0.5s;
   transition: border-color 0.25s ease-in-out, -webkit-box-shadow 0.5s;
   transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
   transition: box-shadow 0.5s, border-color 0.25s ease-in-out, -webkit-box-shadow 0.5s;
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none; }
+  -moz-appearance: none;
+  appearance: none;
+  }
   [type='text']:focus, [type='password']:focus, [type='date']:focus, [type='datetime']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='week']:focus, [type='email']:focus, [type='number']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='url']:focus, [type='color']:focus,
   textarea:focus {
     outline: none;
     border: 1px solid #8a8a8a;
-    background-color: #fefefe;
+    background-color: #2c3042;
     -webkit-box-shadow: 0 0 5px #cacaca;
-            box-shadow: 0 0 5px #cacaca;
+    box-shadow: 0 0 5px #cacaca;
     -webkit-transition: border-color 0.25s ease-in-out, -webkit-box-shadow 0.5s;
     transition: border-color 0.25s ease-in-out, -webkit-box-shadow 0.5s;
     transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
-    transition: box-shadow 0.5s, border-color 0.25s ease-in-out, -webkit-box-shadow 0.5s; }
+    transition: box-shadow 0.5s, border-color 0.25s ease-in-out, -webkit-box-shadow 0.5s;
+    }
 
 textarea {
   max-width: 100%; }
@@ -1070,8 +1072,8 @@ select {
         background-color: #222222;
         color: #fefefe; }
   .button.hollow {
-    border: 1px solid #2ba6cb;
-    color: #2ba6cb; }
+     border: 1px solid #0344c3;
+     color: #00a3ff;}
     .button.hollow, .button.hollow:hover, .button.hollow:focus {
       background-color: transparent; }
     .button.hollow.disabled, .button.hollow.disabled:hover, .button.hollow.disabled:focus, .button.hollow[disabled], .button.hollow[disabled]:hover, .button.hollow[disabled]:focus {
@@ -1101,8 +1103,8 @@ select {
           border: 1px solid #e9e9e9;
           color: #e9e9e9; }
     .button.hollow.alert {
-      border: 1px solid #c60f13;
-      color: #c60f13; }
+        border: 1px solid #ba0039;
+        color: #ff006c;}
       .button.hollow.alert:hover, .button.hollow.alert:focus {
         border-color: #63080a;
         color: #63080a; }
@@ -1110,8 +1112,9 @@ select {
           border: 1px solid #c60f13;
           color: #c60f13; }
     .button.hollow.success {
-      border: 1px solid #5da423;
-      color: #5da423; }
+      border: 1px solid #04ff1b;
+      color: #27ef00;
+      }
       .button.hollow.success:hover, .button.hollow.success:focus {
         border-color: #2f5212;
         color: #2f5212; }
@@ -3242,19 +3245,21 @@ html.is-reveal-open {
 .reveal {
   z-index: 1006;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   display: none;
   padding: 1rem;
-  border: 1px solid #cacaca;
+  border: 1px solid #120027;
   border-radius: 3px;
   background-color: #fefefe;
   position: relative;
   top: 100px;
   margin-right: auto;
   margin-left: auto;
-  overflow-y: auto; }
+  overflow-y: auto;
+  }
   [data-whatinput='mouse'] .reveal {
-    outline: 0; }
+    outline: 0;
+    }
   @media print, screen and (min-width: 40em) {
     .reveal {
       min-height: 0; } }
