Firts post in ES directory

--- a/css/app.css
+++ b/css/app.css
@@ -18,14 +18,24 @@ body {
 .Design-quote{
     margin: 10%
 }
+.Excerpt{
+  margin-top: 1em;
+  padding-left: 1em !important;
+  font-size: 1.4em;
+}
+figure i{
+  font-size: .9em;
+  text-align: center;
+}
 .Footer-text-color{
     color: #c8ccd2
 }
 .Footer-text-size{
-    color: #c8ccd2;
-    font-size: small;
-    margin-bottom: 0;
-    margin-top: 20%;
+  padding: 0 !important;
+  color: #c8ccd2;
+  font-size: small;
+  margin-bottom: 0;
+  margin-top: 20%;
 }
 .Footer-text-size.Adstylus {
     margin-top:0;
@@ -79,6 +89,9 @@ h1{
 p{
     font-size: 1.2em
 }
+.Post p{
+  padding-left: 3em;
+}
 .Quote-paragraph{
     border-left: 3px solid #1779ba;
 }
@@ -99,11 +112,19 @@ p{
     line-height: 1.1;
 }
 .Small-text{
+    padding: 0 !important;
     color:#c8ccd2;
     font-size: x-small;
 }
 .Stylus-story{
     font-size: 1.4em;
+}
+.Title-stylustory{
+  font-size:2.7rem;
+}
+.Title-post{
+  font-size: 1.7em;
+  margin-top: .7em;
 }
 .Text-bigger{
     font-size: 4em
